Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-49588

[REG 4.8->5.X] When programmatically opening a submenu of a context menu using QMenu::setActiveAction() before calling QMenu::exec(), it is shown at the wrong position

XMLWordPrintable

    • fb69a09a2490102ad0c3f6015e04942bb5df7505 (qtbase/5.6, 28.11.2015, 5.6)

      Similar to QTBUG-2196, but also happens with xcb and Windows.

      Run attached example and open context menu for the window with right mouse button.

        1. qtbug49588_53.diff
          1 kB
        2. qtbug49588_diag.diff
          5 kB
        3. qtbug49588.jpg
          qtbug49588.jpg
          12 kB
        4. qtbug49588.zip
          1 kB
        5. qtbug49588.zip
          0.9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            poikelin Joni Poikelin
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes